# clio

./: CMakeLists.txt  LICENSE  README.md
clio/lib/IO/: CMakeLists.txt
clio/lib/IO/CmdlineInput/: default_parser.h
clio/lib/IO/CmdlineInput/Parser/: full_line.h
clio/lib/IO/MultithreadedPrinter/: CMakeLists.txt  MultithreadedPrinter.cpp
clio/lib/utility/Cache/: CMakeLists.txt
cmake/: CMakeLists.txt  clioConfig.cmake  clio_deps.cmake.in  helpers.cmake
example/: CMakeLists.txt  input.cpp
include/IO/: CmdlineInput.hpp  MultithreadedPrinter.hpp
include/clio/: Input.h
include/clio/Input/: CmdlineInputImpl.h  platform.h
include/utility/: Cache.hpp
lib/: CMakeLists.txt
lib/IO/: CMakeLists.txt
lib/IO/CmdlineInput/: platform.cpp
lib/IO/CmdlineInput/Parser/: ParserError.h
lib/IO/MultithreadedPrinter/: MultithreadedPrinter.cpp
lib/utility/: CMakeLists.txt
lib/utility/Cache/: CMakeLists.txt  Cache.hpp
source/: CMakeLists.txt
source/clio/: Input.h  Output.h  errors.h
source/clio/Input/: CmdlineInput.cpp  CmdlineInput.h  CmdlineInputImpl.h  CustomParsers.h  default_parser.h  platform.cpp
source/clio/Input/Parser/: single_word.h
source/clio/Output/: MultithreadedPrinter.h
